deploy/tareasmvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tareasmvc
  name: tareasmvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tareasmvc
  template:
    metadata:
      labels:
        app: tareasmvc
    spec:
      containers:
      - image: ghcr.io/jlsarmientoh/tareasweb:release-candidate-3.0
        name: tareasmvc
        ports:
        - containerPort: 80
          name: http-mvc-svc
        resources: {}
status: {}
