deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /watchdog
        pathType: Prefix
        backend:
          service:
            name: watchdog
            port:
              number: 80
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: tareasmvc
            port:
              number: 80
